added paths to terraform workflows

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -3,6 +3,8 @@ name: Terraform Plan
 on:
   push:
     branches: ["terraform-update"]
+    paths:
+      - terraform/**
 
 permissions:
   contents: read
