--- a/argocd/menifests/argo-httproute.yaml
+++ b/argocd/menifests/argo-httproute.yaml
@@ -7,11 +7,31 @@ spec:
   parentRefs:
     - name: envoy-gateway
       namespace: envoy-system
+  hostnames:
+    - argocd.cbc.com
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /argocd
-      backendRefs:
-        - name: argocd-server
-          port: 80
+    backendRefs:
+    - name: argocd-server
+      port: 80
+
+# Path Based Routing
+
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   name: argocd-route
+#   namespace: argocd
+# spec:
+#   parentRefs:
+#     - name: envoy-gateway
+#       namespace: envoy-system
+#   hostnames:
+#     - cbc.com
+#   rules:
+#     - matches:
+#         - path:
+#             type: PathPrefix
+#             value: /argocd
+#       backendRefs:
+#         - name: argocd-server
+#           port: 80
