--- a/argocd/menifests/passwordapp-httproute.yaml
+++ b/argocd/menifests/passwordapp-httproute.yaml
@@ -1,3 +1,5 @@
+# Domain Based Routing
+
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
@@ -7,11 +9,31 @@ spec:
   parentRefs:
     - name: envoy-gateway
       namespace: envoy-system
+  hostnames:
+    - passworapp.cbc.com
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /passwordapp
-      backendRefs:
-        - name: passwordapp
-          port: 80
+    backendRefs:
+    - name: passwordapp
+      port: 80
+
+# Path Based Routing
+
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: HTTPRoute
+# metadata:
+#   name: passwordapp-route
+#   namespace: passwordapp
+# spec:
+#   parentRefs:
+#     - name: envoy-gateway
+#       namespace: envoy-system
+#   hostnames:
+#     - cbc.com
+#   rules:
+#     - matches:
+#         - path:
+#             type: PathPrefix
+#             value: /passwordapp
+#       backendRefs:
+#         - name: passwordapp
+#           port: 80
